# dnd-nlp-kg

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: all-lints.yml  flake8-black-pytest.yml  flake8-black.yml
dnd_nlp_kg/: main.py  nlp.py  prototyping.ipynb  vis.py
dnd_nlp_kg/data/: lotr.txt  tarakona.txt  test_vestigehills.txt
dnd_nlp_kg/data/nyt10/: nyt10_test.txt
tests/: test_nlp.py  test_vis.py
