[tool.poetry]
name = "dnd-nlp-kg"
version = "0.2.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "dnd_nlp_kg"}]

[tool.poetry.dependencies]
python = "^3.9"
spacy = "3.1.4"
textacy = "^0.12.0"
networkx = "^2.7.1"
pandas = "^1.4.1"
matplotlib = "^3.5.1"
pydot = "^1.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.0"
flake8 = "^4.0.1"
black = {version = "^20.8b1", allow-prereleases = true}



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
